--- a/views/home.jade
+++ b/views/home.jade
@@ -3,10 +3,15 @@ html
 	head
 		title Chat
 		link(rel="stylesheet", href="style.css")
+		link(rel="stylesheet", href="jquery.cssemoticons.css")
+		link(rel="stylesheet", href="smileys.css")
 		script(src='http://code.jquery.com/jquery-1.7.1.min.js')
 		script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js')
 		script(src="/socket.io/socket.io.js")
+		script(src="jquery.cssemoticons.js")
+		script(src="smileys.js")
 		script(src="script.js")
+
 	body
 		div.container#main
 			div.navbar.navbar-fixed-top
