--- a/views/home.jade
+++ b/views/home.jade
@@ -18,7 +18,7 @@ html
 			div.navbar.navbar-fixed-top
 				div.navbar-inner
 					div.container
-						a.brand(href="http://go2mycloud.blogspot.com/") JiTT-Chat#2
+						a.brand(href="http://go2mycloud.blogspot.com/") JiTT-Chat
 			div#chatEntries
 			div.row#entries
 				input(type='text')#messageInput
@@ -37,6 +37,9 @@ html
 		div.modal-body
 			p Choose a name :
 			input(type='text')#pseudoInput
+
+			// p Choose a Language :
+			// input(type='text')#languageInput
 
 			p Please select a Language :
 			select#languageInput
